added library ksvdbox and ompbox

--- a/src/lib/fast-additive-svms/libsvm-mat-3.0-1/Makefile
+++ b/src/lib/fast-additive-svms/libsvm-mat-3.0-1/Makefile
@@ -1,6 +1,6 @@
 # This Makefile is used under Linux
 
-MATLABDIR ?= /Applications/MATLAB_R2009b.app
+MATLABDIR ?= /Applications/MATLAB_R2012b.app/
 # for Mac
 # MATLABDIR ?= /opt/local/matlab
 
