--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 genres/
 spectrograms/
 src/test.au
+src/data/histograms/
+src/data/dictionaries/
+src/data/genres/        
+src/data/sparserep/    
+src/data/spectrograms/ 
